[package]
name = "rcon-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std", "net", "process", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
